# eudaq_ahcal

./: CMakeLists.txt  README.md
cmake/: ahcalConfig.cmake.in  ahcalConfigVersion.cmake.in
user/: CMakeLists.txt
user/calice/: CMakeLists.txt
user/calice/AHCAL/: CMakeLists.txt
user/calice/AHCAL/module/: CMakeLists.txt
user/calice/AHCAL/module/include/: AHCALProducer.hh  ScReader.hh
user/calice/AHCAL/module/src/: AHCALProducer.cc  ScReader.cc
user/calice/BIF_AHCAL/: CMakeLists.txt
user/calice/BIF_AHCAL/module/: CMakeLists.txt
user/calice/BIF_AHCAL/module/src/: caliceahcalbif_Producer.cc
user/calice/exe/: CMakeLists.txt
user/calice/exe/src/: euCliAppender.cxx
user/calice/module/: CMakeLists.txt
user/calice/module/src/: AHCalRawEvent2LCEventConverter.cc  AHCalRawEvent2StdEventConverter.cc  AhcalBifTluAlpideTableDataCollector.cc  AhcalLCFileWriter.cc  AhcalRunControl.cc  AlpideDataCollector.cc  CaliceAhcalBifBxidDataCollector.cc  TrigidSyncDataCollector.cc
user/desytable/: CMakeLists.txt  oldCMakeLists.txt
user/desytable/include/: DesyTableCommunication.hh  DesyTableProducer.hh
user/desytable/misc/conf/: generate.sh  stage.conf  stage.ini
user/desytable/module/: CMakeLists.txt  oldCMakeLists.txt
user/desytable/src/: DesyTable2LCEventConverter.cc  DesyTableCommunication.cc  DesyTableProducer.cc
